tests/c_headers/mock/driver/spi_master.h

typedef struct spi_transaction_t spi_transaction_t;
typedef void(*transaction_cb_t)(spi_transaction_t *trans);
typedef struct {
    uint8_t command_bits;           
    uint8_t address_bits;           
    uint8_t dummy_bits;             
    uint8_t mode;                   
    uint8_t duty_cycle_pos;         
    uint8_t cs_ena_pretrans;        
    uint8_t cs_ena_posttrans;       
    int clock_speed_hz;             
    int input_delay_ns;             
    int spics_io_num;               
    uint32_t flags;                 
    int queue_size;                 
    transaction_cb_t pre_cb;   
    transaction_cb_t post_cb;  
} spi_device_interface_config_t;
struct spi_device_t {
    int id;
    QueueHandle_t trans_queue;
    QueueHandle_t ret_queue;
    spi_device_interface_config_t cfg;
    spi_hal_timing_conf_t timing_conf;
    spi_host_t *host;
    SemaphoreHandle_t semphr_polling;   
    bool        waiting;                
};
struct spi_transaction_t {
    uint32_t flags;                 
    uint16_t cmd;                   
    uint64_t addr;                  
    size_t length;                  
    size_t rxlength;                
    void *user;                     
    union {
        const void *tx_buffer;      
        uint8_t tx_data[4];         
    };
    union {
        void *rx_buffer;            
        uint8_t rx_data[4];         
    };
} ;        
typedef struct {
    struct spi_transaction_t base;  
    uint8_t command_bits;           
    uint8_t address_bits;           
    uint8_t dummy_bits;             
} spi_transaction_ext_t ;
typedef struct spi_device_t* spi_device_handle_t;  
esp_err_t spi_bus_add_device(spi_host_device_t host, const spi_device_interface_config_t *dev_config, spi_device_handle_t *handle);
esp_err_t spi_bus_remove_device(spi_device_handle_t handle);
esp_err_t spi_device_queue_trans(spi_device_handle_t handle, spi_transaction_t *trans_desc, TickType_t ticks_to_wait);
esp_err_t spi_device_get_trans_result(spi_device_handle_t handle, spi_transaction_t **trans_desc, TickType_t ticks_to_wait);
esp_err_t spi_device_transmit(spi_device_handle_t handle, spi_transaction_t *trans_desc);
esp_err_t spi_device_polling_start(spi_device_handle_t handle, spi_transaction_t *trans_desc, TickType_t ticks_to_wait);
esp_err_t spi_device_polling_end(spi_device_handle_t handle, TickType_t ticks_to_wait);
esp_err_t spi_device_polling_transmit(spi_device_handle_t handle, spi_transaction_t *trans_desc);
esp_err_t spi_device_acquire_bus(spi_device_handle_t device, TickType_t wait);
void spi_device_release_bus(spi_device_handle_t dev);