tests/c_headers/spi_master.nim


  spi_transaction_t* {.importc: "spi_transaction_t", header: "spi_master.h", bycopy.} = object
    flags* {.importc: "flags".}: uint32_t ## /< Bitwise OR of SPI_TRANS_* flags
    cmd* {.importc: "cmd".}: uint16_t ## *< Command data, of which the length is set in the ``command_bits`` of spi_device_interface_config_t.
                                  ##
                                  ##   <b>NOTE: this field, used to be "command" in ESP-IDF 2.1 and before, is re-written to be used in a new way in ESP-IDF 3.0.</b>
                                  ##
                                  ##   Example: write 0x0123 and command_bits=12 to send command 0x12, 0x3_ (in previous version, you may have to write 0x3_12).
                                  ##
    `addr`* {.importc: "addr".}: uint64_t ## *< Address data, of which the length is set in the ``address_bits`` of spi_device_interface_config_t.
                                      ##
                                      ##   <b>NOTE: this field, used to be "address" in ESP-IDF 2.1 and before, is re-written to be used in a new way in ESP-IDF3.0.</b>
                                      ##
                                      ##   Example: write 0x123400 and address_bits=24 to send address of 0x12, 0x34, 0x00 (in previous version, you may have to write 0x12340000).
                                      ##
    length* {.importc: "length".}: csize_t ## /< Total data length, in bits
    rxlength* {.importc: "rxlength".}: csize_t ## /< Total data length received, should be not greater than ``length`` in full-duplex mode (0 defaults this to the value of ``length``).
    user* {.importc: "user".}: pointer ## /< User-defined variable. Can be used to store eg transaction ID.
    ano_spi_master_148* {.importc: "ano_spi_master_148".}: INNER_C_UNION_spi_master_146
    ano_spi_master_152* {.importc: "ano_spi_master_152".}: INNER_C_UNION_spi_master_150


## the rx data should start from a 32-bit aligned address to get around dma issue.
## *
##  This struct is for SPI transactions which may change their address and command length.
##  Please do set the flags in base to ``SPI_TRANS_VARIABLE_CMD_ADR`` to use the bit length here.
##

type
  spi_transaction_ext_t* {.importc: "spi_transaction_ext_t",
                          header: "spi_master.h", bycopy.} = object
    base* {.importc: "base".}: spi_transaction_t ## /< Transaction data, so that pointer to spi_transaction_t can be converted into spi_transaction_ext_t
    command_bits* {.importc: "command_bits".}: uint8_t ## /< The command length in this transaction, in bits.
    address_bits* {.importc: "address_bits".}: uint8_t ## /< The address length in this transaction, in bits.
    dummy_bits* {.importc: "dummy_bits".}: uint8_t ## /< The dummy length in this transaction, in bits.

  spi_device_handle_t* = ptr spi_device_t

## /< Handle for a device on a SPI bus
## *
##  @brief Allocate a device on a SPI bus
##
##  This initializes the internal structures for a device, plus allocates a CS pin on the indicated SPI master
##  peripheral and routes it to the indicated GPIO. All SPI master devices have three CS pins and can thus control
##  up to three devices.
##
##  @note While in general, speeds up to 80MHz on the dedicated SPI pins and 40MHz on GPIO-matrix-routed pins are
##        supported, full-duplex transfers routed over the GPIO matrix only support speeds up to 26MHz.
##
##  @param host SPI peripheral to allocate device on
##  @param dev_config SPI interface protocol config for the device
##  @param handle Pointer to variable to hold the device handle
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_NOT_FOUND     if host doesn't have any free CS slots
##          - ESP_ERR_NO_MEM        if out of memory
##          - ESP_OK                on success
##

proc spi_bus_add_device*(host: spi_host_device_t;
                        dev_config: ptr spi_device_interface_config_t;
                        handle: ptr spi_device_handle_t): esp_err_t {.
    importc: "spi_bus_add_device", header: "spi_master.h".}
## *
##  @brief Remove a device from the SPI bus
##
##  @param handle Device handle to free
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_INVALID_STATE if device already is freed
##          - ESP_OK                on success
##

proc spi_bus_remove_device*(handle: spi_device_handle_t): esp_err_t {.
    importc: "spi_bus_remove_device", header: "spi_master.h".}
## *
##  @brief Queue a SPI transaction for interrupt transaction execution. Get the result by ``spi_device_get_trans_result``.
##
##  @note Normally a device cannot start (queue) polling and interrupt
##       transactions simultaneously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @param ticks_to_wait Ticks to wait until there's room in the queue; use portMAX_DELAY to
##                       never time out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if there was no room in the queue before ticks_to_wait expired
##          - ESP_ERR_NO_MEM        if allocating DMA-capable temporary buffer failed
##          - ESP_ERR_INVALID_STATE if previous transactions are not finished
##          - ESP_OK                on success
##

proc spi_device_queue_trans*(handle: spi_device_handle_t;
                            trans_desc: ptr spi_transaction_t;
                            ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_queue_trans", header: "spi_master.h".}
## *
##  @brief Get the result of a SPI transaction queued earlier by ``spi_device_queue_trans``.
##
##  This routine will wait until a transaction to the given device
##  succesfully completed. It will then return the description of the
##  completed transaction so software can inspect the result and e.g. free the memory or
##  re-use the buffers.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Pointer to variable able to contain a pointer to the description of the transaction
##         that is executed. The descriptor should not be modified until the descriptor is returned by
##         spi_device_get_trans_result.
##  @param ticks_to_wait Ticks to wait until there's a returned item; use portMAX_DELAY to never time
##                         out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if there was no completed transaction before ticks_to_wait expired
##          - ESP_OK                on success
##

proc spi_device_get_trans_result*(handle: spi_device_handle_t;
                                 trans_desc: ptr ptr spi_transaction_t;
                                 ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_get_trans_result", header: "spi_master.h".}
## *
##  @brief Send a SPI transaction, wait for it to complete, and return the result
##
##  This function is the equivalent of calling spi_device_queue_trans() followed by spi_device_get_trans_result().
##  Do not use this when there is still a transaction separately queued (started) from spi_device_queue_trans() or polling_start/transmit that hasn't been finalized.
##
##  @note This function is not thread safe when multiple tasks access the same SPI device.
##       Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_OK                on success
##

proc spi_device_transmit*(handle: spi_device_handle_t;
                         trans_desc: ptr spi_transaction_t): esp_err_t {.
    importc: "spi_device_transmit", header: "spi_master.h".}
## *
##  @brief Immediately start a polling transaction.
##
##  @note Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously. Moreover, a device cannot start a new polling
##       transaction if another polling transaction is not finished.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @param ticks_to_wait Ticks to wait until there's room in the queue;
##               currently only portMAX_DELAY is supported.
##
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if the device cannot get control of the bus before ``ticks_to_wait`` expired
##          - ESP_ERR_NO_MEM        if allocating DMA-capable temporary buffer failed
##          - ESP_ERR_INVALID_STATE if previous transactions are not finished
##          - ESP_OK                on success
##

proc spi_device_polling_start*(handle: spi_device_handle_t;
                              trans_desc: ptr spi_transaction_t;
                              ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_polling_start", header: "spi_master.h".}
## *
##  @brief Poll until the polling transaction ends.
##
##  This routine will not return until the transaction to the given device has
##  succesfully completed. The task is not blocked, but actively busy-spins for
##  the transaction to be completed.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param ticks_to_wait Ticks to wait until there's a returned item; use portMAX_DELAY to never time
##                         out.
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_ERR_TIMEOUT       if the transaction cannot finish before ticks_to_wait expired
##          - ESP_OK                on success
##

proc spi_device_polling_end*(handle: spi_device_handle_t; ticks_to_wait: TickType_t): esp_err_t {.
    importc: "spi_device_polling_end", header: "spi_master.h".}
## *
##  @brief Send a polling transaction, wait for it to complete, and return the result
##
##  This function is the equivalent of calling spi_device_polling_start() followed by spi_device_polling_end().
##  Do not use this when there is still a transaction that hasn't been finalized.
##
##  @note This function is not thread safe when multiple tasks access the same SPI device.
##       Normally a device cannot start (queue) polling and interrupt
##       transactions simutanuously.
##
##  @param handle Device handle obtained using spi_host_add_dev
##  @param trans_desc Description of transaction to execute
##  @return
##          - ESP_ERR_INVALID_ARG   if parameter is invalid
##          - ESP_OK                on success
##

proc spi_device_polling_transmit*(handle: spi_device_handle_t;
                                 trans_desc: ptr spi_transaction_t): esp_err_t {.
    importc: "spi_device_polling_transmit", header: "spi_master.h".}
## *
##  @brief Occupy the SPI bus for a device to do continuous transactions.
##
##  Transactions to all other devices will be put off until ``spi_device_release_bus`` is called.
##
##  @note The function will wait until all the existing transactions have been sent.
##
##  @param device The device to occupy the bus.
##  @param wait Time to wait before the the bus is occupied by the device. Currently MUST set to portMAX_DELAY.
##
##  @return
##       - ESP_ERR_INVALID_ARG : ``wait`` is not set to portMAX_DELAY.
##       - ESP_OK : Success.
##

proc spi_device_acquire_bus*(device: spi_device_handle_t; wait: TickType_t): esp_err_t {.
    importc: "spi_device_acquire_bus", header: "spi_master.h".}
## *
##  @brief Release the SPI bus occupied by the device. All other devices can start sending transactions.
##
##  @param dev The device to release the bus.
##
